# tools

CMake/: .README.md.swp  .gitignore  README.md
CMake/hello_project/: CMakeLists.txt  Makefile
CMake/hello_project/include/: main.h
CMake/projectSTM32/: CMakeList.txt  GCC.cmake  Src_include.cmake  make.mk  stm32_ls.ld
CMake/projectSTM32/inc/: led.h  main.h
CMake/projectSTM32/src/: led.c  main.c  stm32_startup.c
Git/: README.md  github-recovery-codes.txt
Readme/: README.md  Viet_README_file.docx
setup_python_ubuntu/: README.md
